# md2docx

./: .gitignore  AGENTS.md  README.md  config.yaml  pyproject.toml
examples/: demo.md  test.md
src/md2docx/: __init__.py  cli.py  config.py  converter.py  math_render.py  numbering.py
tests/: test_converter.py
