[project]
name = "md2docx"
version = "0.1.0"
description = "Convert Markdown to configurable DOCX documents."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.9",
    "mistune>=3.1",
    "python-docx>=1.1",
    "pyyaml>=6.0",
]

[project.scripts]
md2docx = "md2docx.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/md2docx"]

[tool.pytest.ini_options]
testpaths = ["tests"]

